--- a/pp2.css
+++ b/pp2.css
@@ -24,7 +24,7 @@ a {
 
 .head ul {
     display: flex;
-    float: right;
+    justify-content: end;
     list-style: none;
 }
 
@@ -86,8 +86,10 @@ a:hover {
 }
 
 p {
-    font-size: 19px;
     color: white;
+    width: 70%;
+    margin: auto;
+   padding-bottom: 15px;
 }
 
 .p3 {
@@ -127,16 +129,31 @@ p {
 }
 
 .foot {
-    height: 35px;
     padding: 10px;
     background-color: rgb(60, 57, 57);
     color: white;
 }
-
-@media screen and (max-width:560px) {
-    .photo ,.photo1 {
-        max-width: 300px;
-        max-height: 300px;
+ @media screen and (max-width:550px) {
+        .photo {
+            width: 300px;
+            height: 300px;
+            margin: 20px 0;
+        }
+        
+        .photo1 {
+            width: 300px;
+            height: 300px;
+            margin: 20px 0;
+        }
+    
+        .head ul {
+           justify-content: center;
+           margin-top: 10px;
+        }
+    
+        p {
+            padding: 15px 10px;
+            width: 100%;
+        }
     }
     
-}
