--- a/pp3.css
+++ b/pp3.css
@@ -23,7 +23,7 @@ a {
 
 .head ul {
     display: flex;
-    float: right;
+    justify-content: end;
     list-style: none;
 }
 
@@ -123,7 +123,6 @@ input , textarea {
 }
 
 .logo {
-    font-size: 35px;
     padding:  10px;
     background-color: rgba(131, 86, 47, 0.358);
 }
@@ -151,10 +150,15 @@ input , textarea {
 }
 
 .foot {
-    height: 35px;
     padding: 10px;
     background-color: rgb(60, 57, 57);
     color: white;
 }
 
+@media screen and (max-width:550px) {
 
+    .head ul {
+       justify-content: center;
+       margin-top: 10px;
+    }
+}
