--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ a {
 }
 
 .photo1 {
-    background-image: url(/portfolio/WhatsApp\ Image\ 2024-08-29\ at\ 08.15.01_e1fce040.jpg);
+    background-image: url(/portfolio/img\ rohit.jpg);
     background-size: cover;
     height: 350px;
     width: 350px;
