--- a/index3.css
+++ b/index3.css
@@ -12,7 +12,7 @@ body {
 
 
 
-a {
+.a {
     text-decoration: none;
     font-size: 22px;
     font-weight: 900;
@@ -32,7 +32,7 @@ a {
     color: white;
 }
 
-a:hover {
+.a:hover {
    text-decoration: underline;
    color: rgb(255, 131, 8);
 }
@@ -100,7 +100,6 @@ input , textarea {
     display: flex;
     justify-content: end;
     margin-top: 10px;
-    text-decoration: none;
 }
 
 .button {
@@ -110,7 +109,7 @@ input , textarea {
     color: white;
     border-radius: 10px;
     font-size: 1rem;
-    
+    text-decoration: none;
 }
 
 .button:hover {
